--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "standard",
     "test": "node ./node_modules/mocha/bin/mocha",
-    "build": "babel source --presets babel-preset-es2015 --out-dir dist",
+    "build": "./node_modules/.bin/babel source --out-dir dist",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -27,11 +27,13 @@
   },
   "homepage": "https://github.com/kohku/command-invoker#readme",
   "dependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "es6-promise": "^4.0.5"
+    "es6-promise": "^4.2.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-preset-minify": "^0.5.0",
     "chai": "^4.2.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
