--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,22 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# Editor meta data
+.idea
+*.iml
+.vscode
+.DS_Store
+
 # Dependency directories
 node_modules
 jspm_packages
+lib
+dist
+npm-debug.log
+lerna-debug.log
+yarn-error.log
+ignore
+styleguide
 
 # Optional npm cache directory
 .npm
@@ -37,5 +50,3 @@ jspm_packages
 .node_repl_history
 
 .DS_Store
-
-node_modules
