--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "command-invoker",
-  "version": "2.0.2",
+  "version": "3.0.0-beta.0",
   "description": "Module to help encapsulate method invocation",
   "main": "./dist/index.js",
   "scripts": {
     "lint": "eslint ./source/index.js",
-    "test": "node ./node_modules/mocha/bin/mocha",
+    "test": "npm run build && node ./node_modules/mocha/bin/mocha",
     "build": "./node_modules/.bin/babel source --out-dir dist",
     "prepublish": "npm run build"
   },
@@ -27,18 +27,18 @@
   },
   "homepage": "https://github.com/kohku/command-invoker#readme",
   "dependencies": {
-    "es6-promise": "^4.2.8"
+    "es6-promise": "^4.2.8",
+    "mocha": "^9.0.3",
+    "standard": "^16.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "babel-preset-minify": "^0.5.1",
-    "chai": "^4.2.0",
-    "eslint": "^7.9.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "mocha": "^8.1.3",
-    "standard": "^14.3.4"
+    "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.0"
   }
 }
