--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "command-invoker",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0",
   "description": "Module to help encapsulate method invocation",
   "main": "./dist/index.js",
   "scripts": {
