--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "command-invoker",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Module to help encapsulate method invocation",
   "main": "./dist/index.js",
   "scripts": {
@@ -27,9 +27,7 @@
   },
   "homepage": "https://github.com/kohku/command-invoker#readme",
   "dependencies": {
-    "es6-promise": "^4.2.8",
-    "mocha": "^9.2.1",
-    "standard": "^16.0.4"
+    "es6-promise": "^4.2.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
@@ -37,8 +35,10 @@
     "@babel/preset-env": "^7.20.2",
     "babel-preset-minify": "^0.5.2",
     "chai": "^4.3.7",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "mocha": "^9.2.1",
+    "standard": "^16.0.4"
   }
 }
