--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./source/index.js",
     "test": "npm run build && node ./node_modules/mocha/bin/mocha",
-    "build": "./node_modules/.bin/babel source --out-dir dist",
+    "build": "babel source --out-dir dist",
     "prepublish": "npm run build"
   },
   "repository": {
